--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     alert('QR Code scanned: ' + code);
                     scanning = false;
                 }
+                else{
+                    alert('no qr scanned');
+                }
             }
 
             if (!scanning) {
